--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,4 +13,57 @@
 html,
 body {
   max-width: 100vw;
+  height: 100%;
+}
+
+.button {
+  padding: 20px 32px;
+  background-color: transparent;
+  outline: none;
+  border: 1px solid var(--accent);
+  min-width: 325px;
+  width: 100%;
+  font-size: 18px;
+  max-width: 450px;
+  color: var(--accent);
+  font-size: 16px;
+  transition: 0.1s ease-in all;
+  margin: 35px 0;
+  text-transform: capitalize;
+}
+.button:hover {
+  color: white;
+  cursor: pointer;
+  border: 1px solid var(--accent);
+  background-color: var(--accent);
+  outline: none;
+}
+input,
+select {
+  min-width: 325px;
+  width: 100%;
+  height: 32px;
+  font-size: 18px;
+  max-width: 450px;
+  margin: 8px 0;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: rgb(247, 247, 247);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--accent);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: var(--accent);
 }
